opam-version: "2.0"
name: "batyr-core"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "GPL-3.0-or-later"
homepage: "https://github.com/paurkedal/batyr/"
bug-reports: "https://github.com/paurkedal/batyr/issues"
depends: [
  "dune" {>= "2.0"}
  "caqti" {>= "0.8"}
  "caqti-dynload"
  "caqti-lwt"
  "extunix"
  "lwt"
  "lwt_log"
  "lwt_ppx"
  "lwt_react"
  "ppx_compose"
  "ppx_deriving"
  "ocaml"
  "prime"
  "react"
  "tls"
  "tls-lwt"
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/paurkedal/batyr.git"
synopsis: "Base library for the Batyr chat logger"
