opam-version: "1.2"
name: "batyr-lib"
authors: [ "Petter A. Urkedal" ]
maintainer: "paurkedal@gmail.com"
homepage: "https://github.com/paurkedal/batyr/"
bug-reports: "https://github.com/paurkedal/batyr/issues"
dev-repo: "https://github.com/paurkedal/batyr.git"
license: "GPL-3"
build: ["jbuilder" "build" "-p" name "-j" jobs]
depends: [
  "adpkg" {build}
  "calendar"
  "caqti" {>= "0.8"}
  "caqti-dynload"
  "caqti-lwt"
  "caqti-type-calendar"
  "config-file"
  "extunix"
  "lwt"
  "lwt_react"
  "ocamlfind" {build}
  "ppx_compose"
  "ppx_deriving"
  "prime"
  "react"
  "tls"
  "topkg" {build}
]
