opam-version: "2.0"
name: "batyr-on-rocketchat"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "GPL-3"
homepage: "https://github.com/paurkedal/batyr/"
bug-reports: "https://github.com/paurkedal/batyr/issues"
depends: [
  "ocaml"
  "batyr-core"
  "calendar"
  "caqti" {>= "0.8"}
  "caqti-dynload"
  "caqti-lwt"
  "caqti-type-calendar"
  "cmdliner"
  "conduit"
  "conduit-lwt"
  "cryptokit"
  "decoders-yojson"
  "dns-client"
  "logs"
  "lru"
  "lwt"
  "lwt_ppx"
  "lwt_react"
  "ppx_compose"
  "ppx_deriving_yojson"
  "ppx_regexp"
  "prime"
  "ptime"
  "re"
  "react"
  "tls"
  "uri"
  "websocket"
  "websocket-lwt-unix"
  "yojson"
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/paurkedal/batyr.git"
synopsis: "Rocket.Chat logger for Batyr based on the realtime API"
