opam-version: "1.2"
name: "batyr-on-slack"
author: "Petter A. Urkedal <paurkedal@gmail.com>"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
homepage: "https://github.com/paurkedal/batyr/"
bug-reports: "https://github.com/paurkedal/batyr/issues"
dev-repo: "https://github.com/paurkedal/batyr.git"
license: "GPL-3"
build: ["jbuilder" "build" "-p" name "-j" jobs]
depends: [
  "adpkg" {build}
  "batyr-lib"
  "calendar"
  "caqti" {>= "0.8"}
  "caqti-dynload"
  "caqti-lwt"
  "caqti-type-calendar"
  "cmdliner"
  "conduit"
  "conduit-lwt"
  "config-file"
  "dns-lwt-unix"
  "kojson"
  "logs"
  "lru"
  "lwt"
  "lwt_react"
  "ocamlfind" {build}
  "ppx_compose"
  "ppx_deriving"
  "ppx_regexp"
  "prime"
  "ptime"
  "re"
  "react"
  "slacko"
  "tls"
  "topkg" {build}
  "uri"
  "websocket"
  "websocket-lwt"
  "yojson"
]
