opam-version: "2.0"
name: "batyr-on-slack"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "GPL-3"
homepage: "https://github.com/paurkedal/batyr/"
bug-reports: "https://github.com/paurkedal/batyr/issues"
depends: [
  "ocaml"
  "adpkg" {build}
  "batyr-lib"
  "calendar"
  "caqti" {>= "0.8"}
  "caqti-dynload"
  "caqti-lwt"
  "caqti-type-calendar"
  "cmdliner"
  "conduit"
  "conduit-lwt"
  "config-file"
  "dns-lwt-unix"
  "kojson"
  "logs"
  "lru"
  "lwt"
  "lwt_ppx"
  "lwt_react"
  "ocamlfind" {build}
  "ppx_compose"
  "ppx_deriving"
  "ppx_regexp"
  "prime"
  "ptime"
  "re"
  "react"
  "slacko"
  "tls"
  "topkg" {build}
  "uri"
  "websocket"
  "websocket-lwt"
  "yojson"
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/paurkedal/batyr.git"
