opam-version: "2.0"
name: "batyr-on-slack"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "GPL-3.0-or-later"
homepage: "https://github.com/paurkedal/batyr/"
bug-reports: "https://github.com/paurkedal/batyr/issues"
depends: [
  "batyr-core"
  "dune" {>= "2.0"}
  "caqti" {>= "0.8"}
  "caqti-dynload"
  "caqti-lwt"
  "cmdliner" {>= "1.1.0"}
  "conduit"
  "conduit-lwt"
  "dns-client"
  "dns-client-lwt"
  "happy-eyeballs-lwt"
  "kojson"
  "logs"
  "lru"
  "lwt"
  "lwt_ppx"
  "lwt_react"
  "ocaml"
  "ppx_compose"
  "ppx_deriving"
  "ppx_protocol_conv_jsonm" {>= "5.0.0"}
  "ppx_regexp"
  "prime"
  "ptime"
  "re"
  "react"
  "slacko"
  "tls"
  "tls-lwt"
  "uri"
  "websocket"
  "websocket-lwt-unix"
  "yojson"
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/paurkedal/batyr.git"
synopsis: "Slack support for Batyr based on the realtime API"
