opam-version: "2.0"
name: "batyr-on-xmpp"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "GPL-3.0-or-later"
homepage: "https://github.com/paurkedal/batyr/"
bug-reports: "https://github.com/paurkedal/batyr/issues"
depends: [
  "batyr-core"
  "dune" {>= "2.0"}
  "caqti" {>= "0.8"}
  "caqti-dynload"
  "caqti-lwt"
  "erm_xmpp"
  "fmt"
  "logs"
  "lwt"
  "lwt_ppx"
  "lwt_react"
  "mirage-crypto-rng"
  "mirage-crypto-rng-lwt"
  "ocaml"
  "ppx_compose"
  "ppx_deriving"
  "prime"
  "react"
  "tls"
  "tls-lwt"
  "x509"
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/paurkedal/batyr.git"
synopsis: "XMPP logger for Batyr"
