opam-version: "2.0"
name: "batyr-web"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "GPL-3"
homepage: "https://github.com/paurkedal/batyr/"
bug-reports: "https://github.com/paurkedal/batyr/issues"
depends: [
  "ocaml"
  "batyr-lib"
  "batyr-on-xmpp"
  "calendar"
  "caqti" {>= "0.8"}
  "caqti-dynload"
  "caqti-lwt"
  "caqti-type-calendar"
  "config-file"
  "eliom" {>= "6.0.0" & < "7~"}
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "lwt"
  "lwt_ppx"
  "lwt_react"
  "ocamlfind" {build}
  "ppx_compose"
  "ppx_deriving"
  "prime"
  "ptime"
  "react"
  "topkg" {build}
  "yojson"
]
build: [
  "ocaml" "pkg/pkg_web.ml" "build" "--pkg-name" name "--dev-pkg" "%{pinned}%"
]
dev-repo: "git+https://github.com/paurkedal/batyr.git"
