opam-version: "2.0"
name: "batyr-web"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "GPL-3"
homepage: "https://github.com/paurkedal/batyr/"
bug-reports: "https://github.com/paurkedal/batyr/issues"
depends: [
  "batyr-core"
  "caqti" {>= "0.8"}
  "caqti-dynload"
  "caqti-lwt"
  "caqti-type-calendar"
  "dream"
  "dune" {>= "2.0"}
  "fmt"
  "logs"
  "js_of_ocaml"
  "js_of_ocaml-compiler"
  "js_of_ocaml-ppx"
  "js_of_ocaml-tyxml"
  "lwt"
  "ocaml"
  "ppx_deriving_yojson"
  "prime"
  "ptime"
  "tyxml"
  "uri"
  "yojson"
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/paurkedal/batyr.git"
synopsis: "Web interface to Batyr logs"
