(library
  (name batyr_slack)
  (public_name batyr-on-slack)
  (libraries
    batyr-lib
    dns-lwt-unix
    kojson
    logs
    logs.fmt
    lru
    ppx_protocol_conv_jsonm
    re
    re.pcre
    slacko
    websocket
    websocket-lwt-unix)
  (preprocess (pps lwt_ppx ppx_compose ppx_protocol_conv ppx_regexp)))
