(library
  (name batyr_lib)
  (public_name batyr-lib)
  (wrapped false)
  (modules
    Batyr_backoff
    Batyr_cache
    Batyr_data
    Batyr_data_sig
    Batyr_db
    Batyr_prereq
    Batyr_search
    Batyr_search_lexer  ; internal
    Batyr_search_parser ; internal
    Batyr_search_types
    Batyr_sql           ; internal
    Batyr_version)
  (modules_without_implementation
    Batyr_data_sig)
  (libraries
    calendar
    caqti
    caqti-lwt
    caqti-type-calendar
    extunix
    lwt
    lwt_log
    lwt_react
    prime
    prime.unstable
    ptime
    ptime.clock.os
    react)
  (preprocess (pps lwt_ppx ppx_compose)))

(ocamllex batyr_search_lexer)
(ocamlyacc batyr_search_parser)
(rule
  (targets batyr_search_types.ml)
  (deps batyr_search_types.mli)
  (action (copy %{deps} %{targets})))
