opam-version: "1.2"
name: "batyr-web"
authors: [ "Petter A. Urkedal" ]
maintainer: "paurkedal@gmail.com"
homepage: "https://github.com/paurkedal/batyr/"
bug-reports: "https://github.com/paurkedal/batyr/issues"
dev-repo: "https://github.com/paurkedal/batyr.git"
license: "GPL-3"
build: [
  ["cd" "web"]
  ["ocaml" "pkg/pkg.ml" "build"
           "--pkg-name" name
           "--dev-pkg" "%{pinned}%"]
]
depends: [
  "batyr-lib"
  "batyr-on-xmpp"
  "calendar"
  "caqti" {>= "0.8"}
  "caqti-dynload"
  "caqti-lwt"
  "caqti-type-calendar"
  "config-file"
  "eliom" {>= "6.0.0" & < "7~"}
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "lwt"
  "lwt_react"
  "ocamlfind" {build}
  "ppx_compose"
  "ppx_deriving"
  "prime"
  "ptime"
  "react"
  "topkg" {build}
  "yojson"
]
