(library
 (name batyr_core)
 (public_name batyr-core)
 (private_modules
    data_sql
    search_lexer
    search_parser
    search_types)
 (libraries
    calendar
    caqti
    caqti-lwt
    caqti-type-calendar
    cmdliner
    extunix
    lwt
    lwt_log
    lwt_react
    logs
    logs.fmt
    prime
    prime.unstable
    ptime
    ptime.clock.os
    react)
 (preprocess (pps ppx_compose)))

(ocamllex search_lexer)
(ocamlyacc search_parser)
