(library
 (name batyr_core)
 (public_name batyr-core)
 (private_modules
    data_sql
    search_lexer
    search_parser
    search_types)
 (libraries
    calendar
    caqti
    caqti-lwt
    caqti-lwt.unix
    caqti-type-calendar
    cmdliner
    extunix
    fmt
    logs
    logs.fmt
    lwt
    lwt_log
    lwt_react
    prime
    prime.unstable
    ptime
    ptime.clock.os
    react)
 (preprocess (pps ppx_compose)))

(ocamllex search_lexer)
(ocamlyacc search_parser)
