(library
  (name batyr_slack)
  (public_name batyr-on-slack)
  (libraries
    batyr-core
    dns-client
    dns-client-lwt
    kojson
    logs
    logs.fmt
    lru
    ppx_protocol_conv_jsonm
    re
    re.pcre
    slacko
    websocket
    websocket-lwt-unix)
  (preprocess
    (per_module
      ((pps lwt_ppx) listener slack_cache slack_rtm)
      ((pps lwt_ppx ppx_compose ppx_regexp) slack_utils)
      ((pps ppx_protocol_conv) config log))))
