(library
  (name batyr_xmpp)
  (public_name batyr-on-xmpp)
  (modules
    Data
    Data_sig
    Listener
    Sql ; internal
    Xmpp_inst)
  (modules_without_implementation
    Data_sig)
  (libraries
    batyr-core
    caqti
    caqti-lwt
    caqti-type-calendar
    erm_xmpp
    tls
    tls.lwt
    x509)
  (preprocess (pps lwt_ppx)))
