(library
  (name batyr_xmpp)
  (public_name batyr-on-xmpp)
  (modules
    Data
    Data_sig
    Listener
    Sql ; internal
    Xmpp_inst)
  (modules_without_implementation
    Data_sig)
  (libraries
    batyr-core
    caqti
    caqti-lwt
    caqti-type-calendar
    decoders-yojson
    erm_xmpp
    mirage-crypto-rng.lwt
    tls
    tls.lwt
    x509)
  (preprocess (pps lwt_ppx)))
